# lifeops

./: .env.example  .gitignore  AGENTS.md  PROJECT.md  README.md  pyproject.toml
.lifeops/skills/summarizing-last-week-conversations/: SKILL.md
.sisyphus/: boulder.json
.sisyphus/drafts/: chinese-prompts.md  fix-surrogate-encoding.md  github-mcp.md  mcp-client-github.md
.sisyphus/plans/: fix-mcp-eventloop.md  mcp-client-github.md  remove-yaml-config.md  web-search-serpapi.md
configs/: default.yaml
docs/: GUIDE.md  README_sqlite_migration.md  architecture.md  fast_start.md  runtime-agent.md
src/lifeops/: agent.py  history.py
tests/: conftest.py  test_agent.py  test_agent_failure_recovery.py  test_agent_tool_policy.py  test_builtin_tools.py  test_compression_pipeline.py  test_context_manager.py  test_history.py  test_llm_client.py  test_mcp_adapter.py  test_mcp_client.py  test_mcp_config.py  test_mcp_github_server.py  test_mcp_integration.py  test_mcp_manager.py  test_mcp_manager_client.py  test_mcp_types.py  test_memory_service.py  test_memory_storage.py  test_migration.py  test_performance.py  test_runtime_api.py  test_runtime_errors.py  test_runtime_memory_context.py  test_runtime_store.py  test_skills_loader.py  test_skills_matcher.py  test_storage_sqlite.py  test_tool_policy.py  test_tool_registry.py  test_web_api.py
tests/evals/: test_runtime_reliability.py
tests/fixtures/: runtime_eval_cases.py
tests/helpers/: fake_runtime.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js  main.jsx  styles.css
(+67 files in other folders)
